# University-projects

Fourth Semester/Database Management Systems/: Deadlock_T1_C#.sql  Deadlock_T2_C#.sql  SQLQuery1.sql  SQLQuery2.sql  SQLQuery3.sql  index-practic.sql  l4.sql  lab3.sql  lab4 - cu solutii.sql  lab4- fara solutii.sql  practic-1.sql  practic-solutie.sql  scriptpractic.sql  sem2.sql  sem3.sql
Fourth Semester/Software Engineering/: Use case for Sales Agency.docx  (+1 more)
Second Semester/data structures and algorithms/TAD Dictionar Ordonat/: CMakeLists.txt
Second Semester/data structures and algorithms/TAD Dictionar Ordonat/Proiect C++/: DO.cpp  DO.h  Iterator.cpp  Iterator.h
Second Semester/oop/lab10/: CMakeLists.txt  FileRepository.cpp  FileRepository.h  Medicament.cpp  Medicament.h  Repository.cpp  Repository.h  Reteta.cpp  Reteta.h  Service.cpp  Service.h  UI.cpp  UI.h  Undo.h  Validation.cpp  VectDin.h  abstractrepo.cpp  abstractrepo.h  fileRepo.txt  main.cpp
Second Semester/oop/lab6-7dinamic/: CMakeLists.txt  lab6-7dinamic.sln
Second Semester/oop/lab6-7dinamic/lab6-7dinamic/: ClassDiagram.cd  DynamicVector.h  Masina.h  RepoMasina.cpp  RepoMasina.h  ServiceMasina.cpp  ServiceMasina.h  UI.cpp  UI.h  ValidatorMasina.cpp  ValidatorMasina.h  lab6-7dinamic.vcxproj  lab6-7dinamic.vcxproj.filters  main.cpp
Second Semester/oop/lab6-7dinamic/lab6-7dinamic/x64/Debug/: VectDinNewDelete.nativecodeanalysis.xml  VectDinSmartPointer.nativecodeanalysis.xml  lab6-7dinamic.exe.recipe  main.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
Second Semester/oop/lab6-7dinamic/lab6-7dinamic/x64/Debug/lab6-7dinamic.tlog/: lab6-7dinamic.lastbuildstate
(+416 files in other folders)
